@@ -105,9 +105,8 @@ my %WriteMakefileArgs = (
     "Git::Wrapper" => 0,
     "Module::Build" => 0,
     "Module::Metadata" => 0,
-    "Path::Class::Dir" => 0,
     "Path::Tiny" => 0,
-    "Test::DZil" => 0,
+    "Test::DZil" => "5.038",
     "Test::Fatal" => 0,
     "Test::File::ShareDir" => "0.3.0",
     "Test::More" => "0.89",
@@ -195,10 +194,9 @@ my %FallbackPrereqs = (
   "Module::Metadata" => 0,
   "Moose" => 0,
   "Moose::Util::TypeConstraints" => 0,
-  "Path::Class::Dir" => 0,
   "Path::Tiny" => 0,
   "String::Formatter" => 0,
-  "Test::DZil" => 0,
+  "Test::DZil" => "5.038",
   "Test::Fatal" => 0,
   "Test::File::ShareDir" => "0.3.0",
   "Test::More" => "0.89",
